# deep-learning-1

./: informe.md  main.py  pyproject.toml
notebooks/: 01_amazon_stock.ipynb  02_spam_detection.ipynb  03_sign_language.ipynb  04_finger_detection.ipynb
