[project]
name = "deep-learning-1"
version = "0.1.0"
description = "Parcial Deep Learning - Amazon stock prediction, spam detection, sign language classification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tensorflow>=2.18",
    "scikit-learn>=1.6",
    "yfinance>=0.2",
    "pandas>=2.2",
    "numpy>=2.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "kaggle>=1.6",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "requests>=2.32",
]
